Add: System Design with Tailwind CSS and Create Landing Page

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Travel Website & Mobile | Today Experience</title>
+    <meta name="description" content="Travel Web Site and Mobile. In this Website you Search and Find you Destiny favorite">
+    <link rel="stylesheet" href="/src/style.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
