add: new images for mi Landing Page

--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -7,11 +7,11 @@
   <meta name="description" content="Landing Page Travel. This is a Landing page for the Website of Travels">
   <meta name="keywords" content="html, css, javascript">
   <meta name="author" content="chrisVelDev">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <main class="w-full md:grid md:grid-cols-2">
-    <section class=""></section>
+  <main class="w-full">
     <section class=""></section>
   </main>
   
