add: ALL Components and create slider Landing Pages

--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -11,8 +11,10 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <main class="w-full">
-    <section class=""></section>
+  <main class="w-full h-full">
+    <section class="container relative top-5 left-5">
+      <div class="slider"></div>
+    </section>
   </main>
   
   <!-- ===== Javascript ===== -->
