add: new changes in my landing page and builder project

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Website & Mobile | Today Experience</title>
     <meta name="description" content="Travel Web Site and Mobile. In this Website you Search and Find you Destiny favorite">
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
