--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="html, css, javascript">
   <meta name="author" content="chrisVelDev">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <main class="w-full h-full">
