--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Website & Mobile | Today Experience</title>
     <meta name="description" content="Travel Web Site and Mobile. In this Website you Search and Find you Destiny favorite">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+    <main class="w-full h-full">
+      <section class="container">
+        <div class="slider"></div>
+      </section>
+    </main>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
