--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <body>
     <main class="w-full h-full">
       <section class="container">
-        <div class="slider"></div>
+        <div id="idSlider" class="slider"></div>
+        <div class="div">DIV</div>
+
+        <div id="idBtn" class="bg-white text-black px-4 py-2 rounded">
+          <button id="idPrev" class="prev">Prev</button>
+          <button id="idNext" class="next">Next</button>
+        </div>
       </section>
     </main>
     <script type="module" src="./main.js"></script>
