Add: New slider part 1

--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <main class="w-full h-full">
+    <main id="idMain" class="w-full h-full">
       <section class="container">
         <div id="idSlider" class="slider"></div>
-        <div class="div">DIV</div>
-
-        <div id="idBtn" class="bg-white text-black px-4 py-2 rounded">
-          <button id="idPrev" class="prev">Prev</button>
-          <button id="idNext" class="next">Next</button>
-        </div>
       </section>
     </main>
     <script type="module" src="./main.js"></script>
