--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main id="idMain" class="w-full h-full">
-      <section class="container">
+      <section id="idContainer" class="container">
         <div id="idSlider" class="slider"></div>
       </section>
     </main>
