Add: New responsive Web Design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Travel Website & Mobile | Today Experience</title>
     <meta name="description" content="Travel Web Site and Mobile. In this Website you Search and Find you Destiny favorite">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+   <!--  <link rel="stylesheet" href="./src/css/mediaQueries.css"> -->
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
