--- a/src/html/home.html
+++ b/src/html/home.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <link rel="stylesheet" href="/style.css">
+  <title>Home Website | Dream Trip</title>
 </head>
 <body>
-  
+  <main>
+    <h1>Hello World</h1>
+  </main>
 </body>
 </html>
