Add: change styles CSS

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -7,8 +7,8 @@
   <title>Home Website | Dream Trip</title>
 </head>
 <body>
-  <main>
-    <h1>Hello World</h1>
+  <main class="w-full">
+    
   </main>
 </body>
 </html>
