Add: New tailwind CSS Config

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../css/indexPlus.css">
   <title>Home Website | Dream Trip</title>
 </head>
 <body>
-  <main class="w-full">
+  <main class="w-full p-2.5">
     
   </main>
+
+  <!-- ==== Javascript ---- -->
+  <script src="../js/home.js"></script>
 </body>
 </html>
