--- a/src/html/home.html
+++ b/src/html/home.html
@@ -7,7 +7,7 @@
   <title>Home Website | Dream Trip</title>
 </head>
 <body>
-  <main class="w-full p-2.5 sm:relative sm:z-[-2] sm:h-screen sm:bg-cover sm:bg-center sm:bg-no-repeat"  style="background-image: url('../img/travel_three.jpg');">
+  <main class="w-full h-screen p-4 sm:relative sm:z-[-2] sm:h-screen sm:bg-cover sm:bg-center sm:bg-no-repeat md:text-primary "  style="background-image: url('../img/travel_three.jpg');">
     <section class="w-full sm:absolute sm:z-10 sm:h-screen">
         <h1>Hello World</h1>
     </section>
